# Chronolog

./: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
core/: Cargo.toml  README.md
core/src/: clock.rs  errors.rs  lib.rs  main.rs  overlap.rs  schedule.rs  scheduler.rs  scheduling_strats.rs  task.rs  utils.rs
core/src/clock/: system_clock.rs  virtual_clock.rs
core/src/schedule/: calendar.rs  cron.rs  immediate.rs  interval.rs
core/src/scheduler/: task_dispatcher.rs  task_store.rs
core/src/scheduler/task_dispatcher/: default.rs
core/src/scheduler/task_store/: ephemeral.rs
core/src/task/: conditionframe.rs  dependency.rs  error_handler.rs  events.rs  execution.rs  executionframe.rs  fallback.rs  fallbackframe.rs  frames.rs  metadata.rs  parallel.rs  priority.rs  retry.rs  retryframe.rs  selectframe.rs  sequential.rs  timeout.rs  timeoutframe.rs
core/src/task/dependency/: dynamic.rs  flag.rs  logical.rs  metadata.rs  task.rs
core/src/task/frames/: conditionframe.rs  dependencyframe.rs  executionframe.rs  fallbackframe.rs  parallelframe.rs  retryframe.rs  selectframe.rs  sequentialframe.rs  timeoutframe.rs
core/tests/: schedule_basic.rs  virtual_clock_test.rs
documentation/: astro.config.mjs  package-lock.json  package.json
documentation/src/components/: ChronologAsset.tsx  ChronologLogo.tsx  HomePage.tsx  IconButton.tsx  NavbarComponent.tsx  PillarStrengthCard.tsx
documentation/src/pages/: index.mdx
documentation/src/styles/: global.css  hero_bg.module.css
(+2 files in other folders)
