[package]
name = "chronolog"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
thiserror = "2.0.16"
typed-builder = "0.21.2"
once_cell = "1.21.3"
arc-swap = "1.7.1"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
nohash-hasher = "0.2.0"
rand = {version = "0.9.2", features = ["small_rng"]}
rand-unique = "0.2.2"
chrono = "0.4.41"
num-traits = "0.2.19"