[package]
name = "chronolog"
version = "0.1.0"
edition = "2024"

[lib]
name = "chronolog_core"
crate-type = ["rlib"]

[dependencies]
async-trait = "0.1.89"
thiserror = "2.0.16"
typed-builder = "0.21.2"
once_cell = "1.21.3"
arc-swap = "1.7.1"
tokio = { version = "1.47.1", features = ["time", "rt-multi-thread", "macros", "sync"] }
nohash-hasher = "0.2.0"
chrono = { version = "0.4.41", features = ["now"] }
cron-parser = "0.10.0"
uuid = { version = "1.18.1", features = ["v4"] }